[package]
name = "embassy-rp-pico"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.2.0",  features = ["defmt"], git = "https://github.com/embassy-rs/embassy", rev = "ea1b97ed4032d5f925839165c546833323ef1b01" }
embassy-sync = { version = "0.6.0", features = ["defmt"], git = "https://github.com/embassy-rs/embassy", rev = "ea1b97ed4032d5f925839165c546833323ef1b01" }
embassy-executor = { version = "0.6.3", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"], git = "https://github.com/embassy-rs/embassy", rev = "ea1b97ed4032d5f925839165c546833323ef1b01" }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"], git = "https://github.com/embassy-rs/embassy", rev = "ea1b97ed4032d5f925839165c546833323ef1b01" }
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"], git = "https://github.com/embassy-rs/embassy", rev = "ea1b97ed4032d5f925839165c546833323ef1b01" }
embassy-usb = { version = "0.3.0", features = ["defmt"], git = "https://github.com/embassy-rs/embassy", rev = "ea1b97ed4032d5f925839165c546833323ef1b01" }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "ea1b97ed4032d5f925839165c546833323ef1b01" }
embassy-usb-logger = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", rev = "ea1b97ed4032d5f925839165c546833323ef1b01" }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
usbd-hid = "0.8.1"

log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

